argocd-loadbalancer/base/argocd-virtservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-server
  namespace: argocd
spec:
  hosts:
  - "argocd.dev.bonnell.me.uk"
  gateways:
  - argocd-server
  http:
    - route:
      - destination:
          host: argocd-server.argocd.svc.cluster.local
          port:
            number: 80
